Fix duplicate CORS bean